--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ button{
   <h2>✍️ Step 3 – Write your essay</h2>
   <p>Now write your full story as Mr Muggle-Wump. Aim for <strong>150–400 words</strong>.</p>
 
-  textarea.essay {
+<textarea.essay {
   min-height: 300px;
   width: 100%;          /* gör den lika bred som kortet */
   max-width: 100%;      /* hindrar att den krymper */
